[gd_scene load_steps=13 format=3 uid="uid://dj7x8ogugk3io"]

[ext_resource type="Script" path="res://CanvasLayer.gd" id="1_81uho"]
[ext_resource type="Shader" path="res://UI/pause.gdshader" id="2_c3yfe"]
[ext_resource type="FontFile" uid="uid://dw7kouprdlve2" path="res://assets/font/Chunk Five Print.otf" id="3_b6jl1"]
[ext_resource type="PackedScene" uid="uid://blyxb7662mj5t" path="res://UI/options.tscn" id="3_q7mvy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6hgf2"]
shader = ExtResource("2_c3yfe")
shader_parameter/lod = 0.8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5pcc"]
bg_color = Color(0.25098, 0, 0.027451, 0.858824)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m2gxg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8suk"]
bg_color = Color(0.623529, 0.172549, 0.203922, 0.701961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7t6j"]
bg_color = Color(0.623529, 0.172549, 0.203922, 0.447059)

[sub_resource type="Animation" id="Animation_32616"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hcahx"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a1oat"]
_data = {
"RESET": SubResource("Animation_32616"),
"blur": SubResource("Animation_hcahx")
}

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_81uho")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6hgf2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 371.0
offset_top = 160.0
offset_right = -341.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t5pcc")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_m2gxg")

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_m2gxg")

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_m2gxg")

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_b6jl1")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/hover = SubResource("StyleBoxFlat_k7t6j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/disabled = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/focus = SubResource("StyleBoxFlat_b8suk")
text = "Resume"

[node name="restart" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_b6jl1")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/hover = SubResource("StyleBoxFlat_k7t6j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/disabled = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/focus = SubResource("StyleBoxFlat_b8suk")
text = "Restart"

[node name="options" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_b6jl1")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/hover = SubResource("StyleBoxFlat_k7t6j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/disabled = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/focus = SubResource("StyleBoxFlat_b8suk")
text = "Options"

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_b6jl1")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/hover = SubResource("StyleBoxFlat_k7t6j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/disabled = SubResource("StyleBoxFlat_b8suk")
theme_override_styles/focus = SubResource("StyleBoxFlat_b8suk")
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a1oat")
}

[node name="Options" parent="." instance=ExtResource("3_q7mvy")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="hide_options" from="Options" to="." method="_on_options_hide_options"]
